# task-manager

./: .dockerignore  .env  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml
api/: Cargo.toml  Dockerfile
frontend/: Dockerfile  package.json
frontend/src/: config.ts
src/: main.rs
