[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std =  { version = "1.11.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
async-redis-session = "0.2.2"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls"] }
